--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -11,5 +11,7 @@
  *@
 @main("Event Simulator") {
     <div id="tilda"></div>
-    <div id="output"></div>
+    <div id="output">
+        <p>OUTPUT</p>
+    </div>
 }
